@@ -1,4 +1,4 @@
 DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-bluetooth-2.20110726.ebuild 249 RMD160 c5ba362164cbde117ab935c92fae22ede1c34946 SHA1 10d54838e3eb4bcf329c3d44965c517f95c3b8a1 SHA256 54ebcd86be13f5a87d8752a7e1b97a67d3c2a26106fa932e3b1295081822f155
-MISC ChangeLog 441 RMD160 f8933fa3a30a540dcd399645d2580ff2ca8024a7 SHA1 919fe62b89d2704c914f6347bd3c665cacab1238 SHA256 cc724b3ae2df22eb57b8a52ea376a92622cd18480c562e5a882437e8ae324678
+EBUILD selinux-bluetooth-2.20110726.ebuild 343 RMD160 281aa2802ef25d8f1700458c4d183071a0b92cf9 SHA1 a335503b3d06c802cebdc5b334f5be50271241d8 SHA256 b1fe5bff4306d3f344e6e942d5eebab19bc08307e36f0bebdb7fc32b8f738f11
+MISC ChangeLog 530 RMD160 c380715795ba7b38f252222424d0c52aa253e4ae SHA1 4b87d21e2d1d1485b7d07607f37705b5bff507a1 SHA256 eb9b4d0ca6aa7952579f2c31859367086e52a3668c0b9be8e75d8ca9aa95c146
 MISC metadata.xml 233 RMD160 36fb40fd09a35e1acad0b1a07b33fcb6851f5e4b SHA1 6c8724d42b0ea99776f4142f43caf4023c04721e SHA256 0d257adf51bd6d77def690ece4e1ef7388e345dcfef34e6dc398a83a95c73db4
