@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-bluez-2.20110726.ebuild 241 RMD160 613b307beec4fa2e9e4dbfe964dbd88cb95a2e0a SHA1 180820b3b956725d85b1205fa6987202a1e28fc9 SHA256 7e0ade9c25659b4f9da4729acbfc1d752073dac5b9511a77911f662dfbf9fe46
-MISC ChangeLog 2289 RMD160 670429bfe0b491ae08c974ce22e4c7796eef89b4 SHA1 5be904e01d5e50898735a8c62c8bca913589fcaf SHA256 06fcff724824ca2947503affd62e2564495280a44a11235ec75cff22eb45d1ea
+EBUILD selinux-bluez-2.20110726.ebuild 360 RMD160 6256c0c94eaf43e7e9c4546326ee5fc1f093ad1b SHA1 cf2929d54800d4ffe503b58f3b790f0ccd9c7f2f SHA256 4e029e90082d8b11a1d9ee09f8bdfc1362d5543a321c7ec7f5b6dfa893c685a0
+MISC ChangeLog 2392 RMD160 08075c5e1eade04c188aaebddf73c2d0da035230 SHA1 6d903de0f15acef1d53c71ac0032f7d056ca77e3 SHA256 fe65ee938aa401237ed6f307a801844fbc436b1c669ce57b8bc526d7db32cccb
 MISC metadata.xml 229 RMD160 d076f45d1fe3dec70f7a608efdcb93de937be0e8 SHA1 3289ca1c10bd374d8d46ace7dc1eae7641f0054d SHA256 13a492a3402eff44d0530722b9d073f58506eea3becdeb6b4847dfc80952ab1f
