@@ -3,11 +3,11 @@
 # $Header: $
 EAPI="4"
 
+DEPEND=">=sec-policy/selinux-bluetooth-2.20110726"
+
 IUSE=""
-MODS="bluez"
-
-inherit selinux-policy-2
-
-DESCRIPTION="SELinux policy for bluez"
-
+DESCRIPTION="SELinux policy for Bluez (meta-package for bluetooth)"
+HOMEPAGE="http://hardened.gentoo.org/selinux"
 KEYWORDS="~amd64 ~x86"
+SLOT="0"
+LICENSE="public-domain"
