@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-bluez/ChangeLog,v 1.14 2011/06/04 16:12:48 blueness Exp $
 
+  13 Aug 2011; <swift@gentoo.org> selinux-bluez-2.20110726.ebuild:
+  Bluez is no module, bluetooth is
+
   04 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   -selinux-bluez-2.20090730.ebuild, -selinux-bluez-2.20091215.ebuild,
   -selinux-bluez-20080525.ebuild:
